<resources>
    <string name="app_name">TeleChat</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
    <string name="todo">TODO</string>
    <string name="app">Fall Detector</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="signals">Signals</string>
    <string name="guardian">Guardian</string>
    <string name="title">Emergency phone number</string>
    <string name="summary">Please set the emergency phone number here</string>
    <string name="contact">Contact</string>
    <string name="phone">Emergency phone number</string>
    <string name="search">Search Contacts</string>
    <string name="accept">Accept</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="emergency">Emergency</string>
    <string name="grant">Grant Permissions</string>
    <string name="live">Live</string>
    <string name="collection">Collection</string>
    <string name="collecting">Share sensor data with the emergency contact (requires restart)</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>